--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "/home/andre/.local/share/virtualenvs/algorithms-Yp8HgaRB/bin/python"
+    "python.pythonPath": "/home/andre/.local/share/virtualenvs/algorithms-Yp8HgaRB/bin/python",
+    "python.autoComplete.extraPaths": [
+        "python"
+    ]
 }
